--- a/app.css
+++ b/app.css
@@ -90,7 +90,7 @@ main {
     /* z-index: 10; */
 }
 
-#WightPromotionOpton
+#WhitePromotionOpton
 {
     
     width: min(100vh,100vw);
@@ -108,16 +108,16 @@ main {
     width: 20%;
     height: 80%;
 }
-.WightPromotionPieceIcon ,.BlackPromotionPieceIcon{
+.WhitePromotionPieceIcon ,.BlackPromotionPieceIcon{
     height: 100%;
     width: 100%;
 }
 
-.WightWinner{
+.WhiteWinner{
     width: min(100vh,100vw);
     border-radius: 25px;
     border: 4px black solid;
-    display: flex;
+    display: none;
     box-shadow: 0px 0px 50px rgba(0,0,0,1);
     background-color: rgb(255, 255, 255);
     position: absolute;
