--- a/public/app.css
+++ b/public/app.css
@@ -57,7 +57,6 @@ main {
     right: 0;
     bottom: 0;
     left: 0;
-
     background-color: rgb(3, 255, 221);
     width: min(100vh, 100vw);
     height: min(100vh, 100vw);
@@ -65,6 +64,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    transition: all 0.5s ease-in-out;
     /* border: solid 2px black; */
 }
 
@@ -79,6 +79,7 @@ main {
 .icons {
     height: 70%;
     width: 70%;
+    transition: all 0.5s ease-in-out;
 }
 
 #Reset {
@@ -186,4 +187,18 @@ main {
     align-items: center;
     justify-content: space-around;
     font-size: min(14vh, 14vw);
+}
+
+#Board.rotate{
+    transform: rotate(180deg);
+}
+.icons.rotate{
+    transform: rotate(180deg);
+
+}
+
+#Rotate-btn{
+    height: 50px;
+    width: 50px;
+    background: url(icons/Flipicon.jpg);
 }
